@@ -77,10 +77,40 @@ elgg.thewire_tools.init_autocomplete = function(elem) {
 	};
 }
 
+elgg.thewire_tools.show_tread = function (event) {
+	var guid = $(this).attr("rel");
+	var $placeholder = $("#thewire-thread-" + guid);
+
+	if (!$placeholder.length) {
+		return;
+	}
+
+	if ($placeholder.is(":visible")) {
+		$placeholder.hide();
+		return false;
+	}
+
+	if ($placeholder.html().length) {
+		$placeholder.show();
+		return false;
+	}
+	
+	elgg.get("ajax/view/thewire_tools/thread", {
+		data: $placeholder.data(),
+		success: function(result) {
+			$placeholder.html(result).show();
+		}
+	});
+	
+	return false;
+};
+
 elgg.thewire_tools.init = function() {
 	$('.elgg-form-thewire-add textarea[name="body"]').each(function(i) {
 		elgg.thewire_tools.init_autocomplete(this);
 	});
+
+	$(document).on("click", ".elgg-menu-item-thread a", elgg.thewire_tools.show_tread);
 };
 
 
