@@ -3,8 +3,11 @@ Version history
 
 x.x:
 
+- added: ajax loaded thread
+- fixed: no thread link if in thread #8
 - changed: autocomplete for site no longer limited to friends
 - changed: moved mention settings to notification page #7
+- removed: previous entity menu item 
 
 3.0 (2014-09-25):
 
